--- a/project-manager.html
+++ b/project-manager.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assist-rx.workable.com/j/54074E29FB'>AssistRx - Jobs: Senior Project Manager - Healthcare - Apply online</a></h5> 
+<h5><a href='https://assist-rx.workable.com/j/54074E29FB'>AssistRx - Jobs: Senior Project Manager - Healthcare - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -186,6 +186,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
+<h5><a href='https://career2.successfactors.eu/career?career_ns=job_listing&company=C0001225248P&career_job_req_id=86230'>Career Opportunities: Project Manager (86230)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... It all begins with active personal involvement ? curiosity. Why can't things be 
+done differently, better or maybe simpler? Over the years, curiosity builds?...</p>
+<hr/>
 <h5><a href='http://wpromotecareers.applytojob.com/apply/TmG3BZPFsg/Project-Manager'>Project Manager - Wpromote - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -206,7 +211,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Project Manager at Albireo Energy, LLC.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/1A077E55D9'>bChannels - Jobs: Marketing Project Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/1A077E55D9'>bChannels - Jobs: Marketing Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Marketing Project Manager at bChannels.</p>
 <hr/>
@@ -229,7 +234,7 @@ Tower Water.</p>
 <p>Jul 18, 2019 ... Apply online for the job of Clinical Project Manager Dermatology - Homebased at 
 TFS.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/F9DACC7322'>GovNet Communications - Jobs: Project Manager - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/F9DACC7322'>GovNet Communications - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Project Manager at GovNet Communications.</p>
 <hr/>
@@ -322,7 +327,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl7/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl7/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -382,7 +387,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -403,7 +408,7 @@ specializes in?...</p>
 <p>6 days ago ... About the Company: A roofing and building envelope subcontractor specializing 
 in roofing, waterproofing & restoration with a project portfolio consisting of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atheneum.recruitee.com/o/program-manager'>
+<h5><a href='https://atheneum.recruitee.com/o/program-manager'>
       Program Manager - Atheneum Partners
     </a></h5> 
 <p><span class="badge badge-light">Berlin London</span></p>
@@ -421,7 +426,7 @@ in roofing, waterproofing & restoration with a project portfolio consisting of?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999692242850-seller-implementation-project-manager'>Tradeshift Seller Implementation Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999692242850-seller-implementation-project-manager'>Tradeshift Seller Implementation Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -484,10 +489,6 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <h5><a href='https://wolframresearch.recruiterbox.com/jobs/fk03fos/'>
     Partner Project Manager  at Wolfram
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4365495002'>Job Application for Launch Project Manager at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
