--- a/product-manager.html
+++ b/product-manager.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/citybase/jobs/1795350'>Job Application for Product Manager  at CityBase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/citybase/jobs/1795350'>Job Application for Product Manager  at CityBase</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://kiperformance.join.com/jobs/255077-product-owner'>Job @ KI Group (Cologne): Product Owner | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kiperformance.join.com/jobs/255077-product-owner'>Job @ KI Group (Cologne): Product Owner | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -136,7 +136,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at Cloudability.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B9338DE99B'>SkySlope - Jobs: Senior Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at SkySlope.</p>
 <hr/>
@@ -210,7 +210,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/1FF152344C'>Natural Mojo - Jobs: Nutritional Scientist / Product Manager (m/f/x ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/1FF152344C'>Natural Mojo - Jobs: Nutritional Scientist / Product Manager (m/f/x ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Apply online for the job of Nutritional Scientist / Product Manager (m/f/x) Food 
 Supplements at Natural Mojo.</p>
@@ -233,7 +233,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/1D4E042968'>Tide Business Banking - Jobs: Product Owner - Credit - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -347,7 +347,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4366347002'>Job Application for Product Manager, Inventory Trust at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4366347002'>Job Application for Product Manager, Inventory Trust at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
